tests/snapshots/runtime_error_fixtures/base_flat_map_return_shape.snap
---
source: tests/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/base_flat_map_return_shape.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
• 1 error • examples/runtime_errors/base_flat_map_return_shape.flx
error[E1009]: flat_map: callback must return an Array when input is Array, got Int

  examples/runtime_errors/base_flat_map_return_shape.flx:1:1
  |
1 | fn main() {
  | ^^^^^^^^^^^
2 |     let ignored = flat_map(#[1], /x -> x)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
3 | }
  | ^

Stack trace:
  at main (examples/runtime_errors/base_flat_map_return_shape.flx:1:1)
  at <main>
== jit ==
status: 1
stdout:
<empty>
stderr:
missing JIT CFG closure function
